fix text clipped by hamburger on mobile validation

--- a/hack-at-brown-2015/static/css/index.css
+++ b/hack-at-brown-2015/static/css/index.css
@@ -1123,7 +1123,7 @@ section .background > .mid {
         margin-bottom: 10px;
     }
     .double_right {
-        padding-top: 8%;
+        padding-top: 12%;
     }
     .top-bar_ul {
         padding-top: 45px;
